--- a/custom.scss
+++ b/custom.scss
@@ -1,35 +1,37 @@
 /*-- scss:defaults --*/
+// Base colors
 $blue: #0451A5 !default;
 $primary: $blue !default;
 
 .quarto-about-solana .about-image {
-  transform: scale(1.08);
-  object-fit: cover;
+  transform: scale(1.08); /* Adjust the zoom factor as needed */
+  object-fit: cover;       /* Ensures the image doesn't distort */
   transition: transform 0.3s ease;
-  border-radius: 50%;
+  border-radius: 50%; 
   border: 1px solid #727475;
   background-color: #ffffff;
 }
 
-/* Layout for entries */
+/* Layout for experience and education entries */
 .cv-entry {
   display: flex;
   justify-content: space-between;
   align-items: baseline;
+  font-weight: 600; // Only affects cv-title unless overridden
   margin-top: 0.2em;
   margin-bottom: 0.4em;
-  font-weight: 600;
 }
 
 .cv-title {
   font-size: 1.05em;
   font-weight: 600;
+  margin-top: 0;
 }
 
 .cv-location {
   font-weight: 400;
   font-size: 1.05em;
-  color: #555;
+
 }
 
 .cv-date {
@@ -37,26 +39,28 @@ $primary: $blue !default;
   color: #6c757d;
 }
 
+
+/* Bullet formatting */
 ul {
   padding-left: 1.5em;
   padding-inline-start: 2em;
-  margin-top: 0.3em;
-  margin-bottom: 0.8em;
 }
 
+/* Indent bullets under entries */
 .cv-entry + ul {
   margin-left: 0.5em;
 }
 
+/* BLUE job and degree titles */
 .degree-title,
 .job-title {
+  margin-bottom: -1em;     // Reduce gap *below* the degree/job title
   margin-top: 0.2em;
-  margin-bottom: -0.3em;
 }
 
 .degree-title:not(:first-child),
 .job-title:not(:first-child) {
-  margin-top: 1em;
+  margin-top: 1em;         // Add gap *above* the next degree/job title (space between entries)
 }
 
 .degree-title a,
@@ -73,6 +77,7 @@ ul {
   cursor: pointer;
 }
 
+/* Other links */
 a {
   color: inherit;
   text-decoration: none;
