--- a/styles/custom.scss
+++ b/styles/custom.scss
@@ -1,3 +1,16 @@
+/*-- scss:rules --*/
+html, body, 
+.navbar,                     
+.quarto-nav,                   
+.repo-card,                   
+.cv-entry, 
+.degree-title, .job-title {
+  transition: background-color 0.8s ease,
+              color 0.8s ease,
+              border-color 0.8s ease;
+}
+
+
 /*-- scss:defaults --*/
 // Base colors
 $blue: #0451A5 !default;
